--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
         <a
-          href="linkedin.com/in/j-welington-ribas-jr-993632112"
-          target="_blank"
-        >
+          href="https://www.linkedin.com/in/j-welington-ribas-jr-993632112"  target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
