--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <footer>
         Feito com ♥ pela
         <a href="https://bullconsignados.com.br/" target="_blank">
-          Bull Consignados</a
+          BeeDev</a
         >
       </footer>
     </div>
